// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Slider /> > renders with 'range' 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="group flex flex-col gap-1"
      >
        <label
          class="text-sm"
          id=":r2:"
        >
          Range
        </label>
        <div
          class="flex items-center gap-2"
        >
          <span
            aria-disabled="false"
            class="relative flex w-full touch-none select-none items-center py-3"
            data-orientation="horizontal"
            dir="ltr"
            style="--radix-slider-thumb-transform: translateX(-50%);"
          >
            <span
              class="relative grow rounded-full border-[2px] border-dashed border-surface-disabled data-[disabled]:border-solid"
              data-orientation="horizontal"
            >
              <span
                class="absolute ml-[-2px] mt-[-2px] h-full rounded-full border-[2px] border-interactive-primary data-[disabled]:border-disabled group-hover:[&:not([data-disabled])]:border-interactive-primary-hovered group-active:[&:not([data-disabled])]:border-interactive-primary"
                data-orientation="horizontal"
                style="left: 10%; right: 50%;"
              />
            </span>
            <span
              style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
            >
              <span
                aria-label="Price range"
                aria-labelledby=":r2:"
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="10"
                class="block h-4 w-4 rounded-[10px] bg-interactive-primary focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 group-active:focus-visible:scale-[1.35] data-[disabled]:bg-interactive-disabled group-hover:[&:not([data-disabled])]:bg-interactive-primary-hovered group-active:[&:not([data-disabled])]:bg-interactive-primary"
                data-orientation="horizontal"
                data-radix-collection-item=""
                role="slider"
                style=""
                tabindex="0"
              />
            </span>
            <span
              style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(50% + 0px);"
            >
              <span
                aria-label="Price range"
                aria-labelledby=":r2:"
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="50"
                class="block h-4 w-4 rounded-[10px] bg-interactive-primary focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 group-active:focus-visible:scale-[1.35] data-[disabled]:bg-interactive-disabled group-hover:[&:not([data-disabled])]:bg-interactive-primary-hovered group-active:[&:not([data-disabled])]:bg-interactive-primary"
                data-orientation="horizontal"
                data-radix-collection-item=""
                role="slider"
                style=""
                tabindex="0"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="group flex flex-col gap-1"
    >
      <label
        class="text-sm"
        id=":r2:"
      >
        Range
      </label>
      <div
        class="flex items-center gap-2"
      >
        <span
          aria-disabled="false"
          class="relative flex w-full touch-none select-none items-center py-3"
          data-orientation="horizontal"
          dir="ltr"
          style="--radix-slider-thumb-transform: translateX(-50%);"
        >
          <span
            class="relative grow rounded-full border-[2px] border-dashed border-surface-disabled data-[disabled]:border-solid"
            data-orientation="horizontal"
          >
            <span
              class="absolute ml-[-2px] mt-[-2px] h-full rounded-full border-[2px] border-interactive-primary data-[disabled]:border-disabled group-hover:[&:not([data-disabled])]:border-interactive-primary-hovered group-active:[&:not([data-disabled])]:border-interactive-primary"
              data-orientation="horizontal"
              style="left: 10%; right: 50%;"
            />
          </span>
          <span
            style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
          >
            <span
              aria-label="Price range"
              aria-labelledby=":r2:"
              aria-orientation="horizontal"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="10"
              class="block h-4 w-4 rounded-[10px] bg-interactive-primary focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 group-active:focus-visible:scale-[1.35] data-[disabled]:bg-interactive-disabled group-hover:[&:not([data-disabled])]:bg-interactive-primary-hovered group-active:[&:not([data-disabled])]:bg-interactive-primary"
              data-orientation="horizontal"
              data-radix-collection-item=""
              role="slider"
              style=""
              tabindex="0"
            />
          </span>
          <span
            style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(50% + 0px);"
          >
            <span
              aria-label="Price range"
              aria-labelledby=":r2:"
              aria-orientation="horizontal"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="50"
              class="block h-4 w-4 rounded-[10px] bg-interactive-primary focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 group-active:focus-visible:scale-[1.35] data-[disabled]:bg-interactive-disabled group-hover:[&:not([data-disabled])]:bg-interactive-primary-hovered group-active:[&:not([data-disabled])]:bg-interactive-primary"
              data-orientation="horizontal"
              data-radix-collection-item=""
              role="slider"
              style=""
              tabindex="0"
            />
          </span>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Slider /> > renders with 'single' 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="group flex flex-col gap-1"
      >
        <label
          class="text-sm"
          id=":r0:"
        >
          Single
        </label>
        <div
          class="flex items-center gap-2"
        >
          <span
            aria-disabled="false"
            class="relative flex w-full touch-none select-none items-center py-3"
            data-orientation="horizontal"
            dir="ltr"
            style="--radix-slider-thumb-transform: translateX(-50%);"
          >
            <span
              class="relative grow rounded-full border-[2px] border-dashed border-surface-disabled data-[disabled]:border-solid"
              data-orientation="horizontal"
            >
              <span
                class="absolute ml-[-2px] mt-[-2px] h-full rounded-full border-[2px] border-interactive-primary data-[disabled]:border-disabled group-hover:[&:not([data-disabled])]:border-interactive-primary-hovered group-active:[&:not([data-disabled])]:border-interactive-primary"
                data-orientation="horizontal"
                style="left: 0%; right: 90%;"
              />
            </span>
            <span
              style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
            >
              <span
                aria-label="Volume"
                aria-labelledby=":r0:"
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="10"
                class="block h-4 w-4 rounded-[10px] bg-interactive-primary focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 group-active:focus-visible:scale-[1.35] data-[disabled]:bg-interactive-disabled group-hover:[&:not([data-disabled])]:bg-interactive-primary-hovered group-active:[&:not([data-disabled])]:bg-interactive-primary"
                data-orientation="horizontal"
                data-radix-collection-item=""
                role="slider"
                style=""
                tabindex="0"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="group flex flex-col gap-1"
    >
      <label
        class="text-sm"
        id=":r0:"
      >
        Single
      </label>
      <div
        class="flex items-center gap-2"
      >
        <span
          aria-disabled="false"
          class="relative flex w-full touch-none select-none items-center py-3"
          data-orientation="horizontal"
          dir="ltr"
          style="--radix-slider-thumb-transform: translateX(-50%);"
        >
          <span
            class="relative grow rounded-full border-[2px] border-dashed border-surface-disabled data-[disabled]:border-solid"
            data-orientation="horizontal"
          >
            <span
              class="absolute ml-[-2px] mt-[-2px] h-full rounded-full border-[2px] border-interactive-primary data-[disabled]:border-disabled group-hover:[&:not([data-disabled])]:border-interactive-primary-hovered group-active:[&:not([data-disabled])]:border-interactive-primary"
              data-orientation="horizontal"
              style="left: 0%; right: 90%;"
            />
          </span>
          <span
            style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
          >
            <span
              aria-label="Volume"
              aria-labelledby=":r0:"
              aria-orientation="horizontal"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="10"
              class="block h-4 w-4 rounded-[10px] bg-interactive-primary focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 group-active:focus-visible:scale-[1.35] data-[disabled]:bg-interactive-disabled group-hover:[&:not([data-disabled])]:bg-interactive-primary-hovered group-active:[&:not([data-disabled])]:bg-interactive-primary"
              data-orientation="horizontal"
              data-radix-collection-item=""
              role="slider"
              style=""
              tabindex="0"
            />
          </span>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
